kubernetes-practice/src/main/java/ch5/ssl/immu-kubia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: immu-kubia-ingress
spec:
  tls:
    - hosts:
      - immu.kubia.com
      secretName: tls-secret
  rules:
    - host: immu.kubia.com
      http:
        paths:
          - path: /
            backend:
              serviceName: immu-kubia-node-port-service
              servicePort: 80
